--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -2,3 +2,8 @@
 add_subdirectory(gtest)
 message("gtest include dir: ${gtest_SOURCE_DIR}")
 include_directories(${gtest_SOURCE_DIR})
+
+# MatPlot++ plotting library.
+add_subdirectory(matplotpp)
+message("matplotpp include dir: ${matplotpp_SOURCE_DIR}")
+include_directories(${matplotpp_SOURCE_DIR})
