--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install --yes build-essential
-    doxygen libgflags-dev libgoogle-glog-dev mercurial cmake libatlas-base-dev; fi
+    doxygen libgflags-dev libgoogle-glog-dev mercurial libatlas-base-dev; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install python-software-properties; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install gcc-4.8 g++-4.8; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20; fi
@@ -39,6 +39,12 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libboost-all-dev; fi
 
 before_script:
+   # Get a newer version of cmake.
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://www.cmake.org/files/v3.5/cmake-3.5.2.tar.gz; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then tar xf cmake-3.5.2.tar.gz; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cd cmake-3.5.2; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ./configure && make && sudo make install && cd ..; fi
+
   # Get Eigen. The apt-get version on 12.04 is too old; we need at least 3.1.0.
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then mkdir eigen && cd eigen; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then hg clone https://bitbucket.org/eigen/eigen; fi
@@ -57,12 +63,6 @@ before_script:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then make -j4; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo make install; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cd ../..; fi
-
-   # Get a newer version of cmake.
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://www.cmake.org/files/v3.5/cmake-3.5.2.tar.gz; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then tar xf cmake-3.5.2.tar.gz; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cd cmake-3.5.2; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ./configure && make && sudo make install && cd ..; fi
 
   # Configure and make GP.
   - mkdir bin
